# pytest-playwright-example

./: .gitignore  README.md  pyproject.toml  pytest.ini
tests/: test_example.py
